<resources>
    <string name="app_name">ProjectFramework</string>


    <string name="login">Login</string>
    <string name="regist">Regist</string>
    <string name="userRegister">User Register</string>
    <string name="wechatNum">Wechat Num</string>
    <string name="phoneNum">Phone Num</string>
    <string name="resetPassword_phoneNumHint">Please Input Phone Num</string>
    <string name="accountBinding">Account Binding</string>
    <string name="passWord">PassWord</string>
    <string name="pleaseInputPassword">Please Input Password</string>
    <string name="registerBindingAccount">RegisterBinding Account</string>
    <string name="confirmBinding">ConfirmBinding</string>
    <string name="pleaseInputCorrectPhoneNum">please Input Correct PhoneNum</string>
    <string name="sign_vCodeSent">Verification Code Has Been Sent, Please Check</string>
    <string name="sign_sendVCodeWait">%1$ds</string>
    <string name="sign_getVCode">Get Captcha</string>
    <string name="pleaseInputVCode">Please Enter The Verification Code</string>
    <string name="incorrectPasswordFormat">Incorrect Password Format</string>
    <string name="pleaseInputPasswordAgain">Please Enter The Password Again</string>
    <string name="signOn_passwordNotSame">The Two Password Inputs Are Inconsistent</string>
    <string name="userRegistrationAgreement">User Registration Agreement</string>
    <string name="privacyPolicy">xxx Privacy Policy</string>
    <string name="forgetPassword">Forget Password</string>
    <string name="Vcode">Verification Code</string>
    <string name="newPassword">NewPassword</string>
    <string name="confirmPassword">Confirm Password</string>
    <string name="passwordRequirements">The password must be a combination of 8–16 digits and characters</string>
    <string name="passwordCallBack">Retrieve Password</string>
    <string name="resetPassword_resetSuccess">Reset successfully! Please log in with your new password</string>
    <string name="cancel">Cancel</string>
    <string name="confirm">Confirm</string>
    <string name="pleaseInputUserName">pleaseInputUserName</string>
    <string name="wechat">Wechat</string>
    <string name="qq">QQ</string>
    <string name="loginFailed">Login Failed</string>
    <string name="canceled">Canceled</string>
    <string name="registrationAgreement">《APP User Registration Agreement》</string>
    <string name="policy">《APP Privacy Policy》</string>
    <string name="signOn_signSuccess">Registration Successful! Please go to login</string>
    <string name="changePasswordSuccess">The password has been changed successfully. The new password will be used for the next login</string>
    <string name="changePassword">ChangePassword</string>
    <string name="pleaseInputNewPassword">Please enter a new password</string>
    <string name="pleaseInputNewPasswordAgain">Please enter the new password again</string>
    <string name="incorrectNewPasswordFormat">The new password format is incorrect</string>
    <string name="paySuccess">PaySuccess!</string>
    <string name="wechatCannotReach">Wechat is not installed or the version is too low</string>
    <string name="payFail">PayFailed</string>
    <string name="orderAbnormal">Abnormal Order</string>
    <string name="payCancel">Payment Cancelled</string>
    <string name="tipsExit">Press again to exit the program</string>
    <string name="homePage">HomePage</string>
    <string name="function">Function</string>
    <string name="mine">Mine</string>
    <string name="pleaseWaiting">Please Wait</string>
    <string name="paymentAmount">Payment Amount</string>
    <string name="choosePayType">Select Payment Method</string>
    <string name="alipay">Alipay</string>
    <string name="confirmPayment">Confirm Payment</string>
    <string name="alreadyBindingAccount">Already Binding Account</string>
    <string name="chonfirmChange">Confirm Modification</string>
    <string name="clickRegistTreaty">clicking the "register" button above, you agree</string>
    <string name="payment">Payment</string>
    <string name="personalCenter">Personal Center</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>
    <string name="sir_error">Loading Failed</string>
    <string name="sir_error_reTry">Tap to try again</string>
    <string name="sir_noData">No Data</string>
    <string name="sir_notSigned">Not Signed\n Click to go</string>
    <string name="sir_notNetwork">Network connection is not checked \n Tap to try again</string>
    <string name="permissionDescription">Permission Description</string>
    <!--Widget-->
    <string name="smartRefreshLayout">SmartRefreshLayout</string>
    <!--app更新状态-->
    <string name="update_status_start">Downloading</string>
    <string name="update_status_running">Downloading %d%%</string>
    <string name="update_status_successful">Download complete, click Install</string>
    <string name="update_status_failed">Download failed. Click to try again</string>
    <string name="common_loading">loading&#8230;</string>
</resources>