<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >
<androidx.core.widget.NestedScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:focusable="true"
        android:focusableInTouchMode="true"
       >

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="@dimen/qb_px_328"
            android:src="@drawable/icon_login_top"
            />
        <ImageView
            android:id="@+id/imageView_login_type"
            android:layout_width="@dimen/qb_px_250"
            android:layout_height="@dimen/qb_px_160"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/qb_px_210"
            android:src="@drawable/icon_login_logo"
            />
    </FrameLayout>

    <!--用户名,密码-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="top|center_horizontal"
        android:layout_marginTop="@dimen/qb_px_50"
        android:orientation="vertical">

        <EditText
            android:id="@+id/editText_login_signName"
            android:layout_width="match_parent"
            android:layout_height="@dimen/qb_px_96"
            android:layout_marginEnd="@dimen/qb_px_80"
            android:layout_marginStart="@dimen/qb_px_80"
            android:background="@null"
            android:drawablePadding="@dimen/qb_px_20"
            android:gravity="center_vertical|start"
            android:hint="@string/pleaseInputUserName"
            android:inputType="phone"
            android:maxLength="11"
            android:paddingBottom="@dimen/qb_px_24"
            android:paddingEnd="@dimen/qb_px_16"
            android:paddingStart="@dimen/qb_px_16"
            android:paddingTop="@dimen/qb_px_24"
            android:textColor="@color/color_333333"
            android:textColorHint="@color/color_C0C0C0"
            android:textCursorDrawable="@xml/my_cursor"
            android:textSize="14sp" />

        <View
            android:id="@+id/bottomLine_login_signName"
            android:layout_width="match_parent"
            android:layout_height="@dimen/qb_px_2"
            android:layout_marginEnd="@dimen/qb_px_80"
            android:layout_marginStart="@dimen/qb_px_80"
            android:background="@drawable/selector_background_rect_special_for_sign_bottom_line" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/qb_px_80"
            android:layout_marginStart="@dimen/qb_px_80"
            >

            <EditText
                android:id="@+id/editText_login_password"
                android:layout_width="match_parent"
                android:layout_height="@dimen/qb_px_96"
                android:layout_alignParentTop="true"
                android:layout_marginTop="2dp"
                android:background="@null"
                android:drawablePadding="@dimen/qb_px_20"
                android:gravity="center_vertical|start"
                android:hint="@string/pleaseInputPassword"
                android:inputType="textPassword"
                android:maxLength="16"
                android:paddingStart="@dimen/qb_px_16"
                android:paddingTop="@dimen/qb_px_32"
                android:paddingEnd="@dimen/qb_px_84"
                android:paddingBottom="@dimen/qb_px_24"
                android:textColor="@color/color_333333"
                android:textColorHint="@color/color_C0C0C0"
                android:textCursorDrawable="@xml/my_cursor"
                android:textSize="14sp" />

            <View
                android:id="@+id/bottomLine_login_password"
                android:layout_width="match_parent"
                android:layout_height="@dimen/qb_px_2"
                android:layout_alignParentBottom="true"
                android:background="@drawable/selector_background_rect_special_for_sign_bottom_line" />

            <ImageView
                android:id="@+id/imageView_login_passwordVisible"
                android:layout_width="@dimen/qb_px_64"
                android:layout_height="@dimen/qb_px_64"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:background="@drawable/style_background_operation_press_square"
                android:clickable="true"
                android:contentDescription="@null"
                android:focusable="true"
                android:foreground="@drawable/style_background_operation_press_square"
                android:padding="@dimen/qb_px_8"
                android:scaleType="fitXY"
                android:src="@drawable/selector_drawable_sign_password_visible" />
        </RelativeLayout>
    </LinearLayout>


    <Button
        android:id="@+id/bt_loginin"
        android:layout_width="match_parent"
        android:layout_height="@dimen/qb_px_90"
        android:layout_marginEnd="@dimen/qb_px_80"
        android:layout_marginStart="@dimen/qb_px_80"
        android:layout_marginTop="@dimen/qb_px_36"
        android:background="@drawable/shape_background_oval_primarycolor_for_button_96px"
        android:gravity="center"
        android:text="@string/login"
        android:textColor="@color/color_FFFFFF"
        android:textSize="16sp" />

    <!--注册,忘记密码-->
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/textview_register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="14sp"
            android:text="@string/userRegister"
            android:layout_marginStart="@dimen/qb_px_80"
            android:layout_marginTop="@dimen/qb_px_40"
            android:background="@drawable/style_background_operation_press"
            android:clickable="true"
            android:focusable="true"
            android:textColor="@color/color_333333"
            />
        <TextView
            android:id="@+id/textview_forgetPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="14sp"
            android:text="@string/forgetPassword"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="@dimen/qb_px_80"
            android:layout_marginTop="@dimen/qb_px_40"
            android:background="@drawable/style_background_operation_press"
            android:clickable="true"
            android:focusable="true"
            android:textColor="@color/color_333333"
            />
    </RelativeLayout>

    <!--第三方登录-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/qb_px_50"
        android:gravity="center"
        android:orientation="horizontal">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            >
            <ImageView
                android:id="@+id/imageView_signIn_signInByThirdPart_wechat"
                android:layout_width="@dimen/qb_px_112"
                android:layout_height="@dimen/qb_px_112"
                android:clickable="true"
                android:contentDescription="@null"
                android:focusable="true"
                android:scaleType="fitXY"
                android:background="@drawable/style_background_operation_press"
                android:src="@drawable/icon_login_wx" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/wechat"
                android:textSize="12sp"
                android:layout_marginTop="@dimen/qb_px_24"
                />
        </LinearLayout>

        <Space
            android:layout_width="@dimen/qb_px_90"
            android:layout_height="wrap_content" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            >
            <ImageView
                android:id="@+id/imageView_signIn_signInByThirdPart_qq"
                android:layout_width="@dimen/qb_px_112"
                android:layout_height="@dimen/qb_px_112"
                android:clickable="true"
                android:contentDescription="@null"
                android:focusable="true"
                android:scaleType="fitXY"
                android:background="@drawable/style_background_operation_press"
                android:src="@drawable/icon_login_qq" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_marginTop="@dimen/qb_px_24"
                android:text="@string/qq"
                android:textSize="12sp"
                />
        </LinearLayout>
    </LinearLayout>


</LinearLayout>
</androidx.core.widget.NestedScrollView>
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="@dimen/qb_px_150"
        android:src="@drawable/icon_login_bottom"
        android:layout_alignParentBottom="true"
        />
</RelativeLayout>